# pixiv-mcp

./: .env  .gitignore  README.md  pyproject.toml  setup_pixiv_mcp.py  start_http_server.py  test_mcp_server.py
examples/: basic_usage.py
src/: auth.py  config.py  http_server.py  server.py  token_manager.py  tools.py
